--- a/mixins/_transition.scss
+++ b/mixins/_transition.scss
@@ -1,6 +1,6 @@
 @mixin transition($value) {
 	-webkit-transition: $value;
-	-moz-transition: $value
-	-o-transition: $value
+	-moz-transition: $value;
+	-o-transition: $value;
 	transition: $value;
 }
