--- a/_global.scss
+++ b/_global.scss
@@ -81,3 +81,27 @@ $global-body-font-color: $global-grey-deep !default;
  * @type Color
  */
 $global-body-background: $global-grey-washed !default;
+
+/**
+ * Включает `<true>` округление углов.
+ * @type Boolean
+ */
+$global-enable-rounded: true !default;
+ 
+/**
+ * Значение радиуса угла по умолчанию.
+ * @type Number
+ */
+$global-border-radius: .1875rem/*3px*/ !default;
+
+/**
+ * Включает `<true>` тени у элементов.
+ * @type Boolean
+ */
+ $global-enable-shadows: true !default;
+ 
+ /**
+  * Значение тени по умолчанию.
+  * @type Number
+  */
+ $global-box-shadow: 0 1px 7px rgba(0, 0, 0, .05) !default;
