Небольшие правки кода

--- a/_global.scss
+++ b/_global.scss
@@ -92,7 +92,7 @@ $global-enable-rounded: true !default;
  * Значение радиуса угла по умолчанию.
  * @type Number
  */
-$global-border-radius: .1875rem/*3px*/ !default;
+$global-border-radius: 0.1875rem !default;
 
 /**
  * Включает `<true>` тени у элементов.
