--- a/_global.scss
+++ b/_global.scss
@@ -1,92 +1,10 @@
-/**
- * Палитра серых цветов.
- * @type Map
- */
- $global-grey-palette: (
-	grey-washed: #fefefe, /* Белый цвет. */
-	grey-light: #e6e6e6,  /* Светло-серый цвет. */
-	gray-medium: #cacaca, /* Серый цвет. */
-	grey-dark: #8a8a8a,   /* Темно-серый цвет. */
-	grey-deep: #2b2b2b    /* Черный цвет. */
-) !default;
+@import 'palette';
 
 /**
- * Белый цвет.
- * @type Color
- */
-$global-grey-washed: map-get($global-grey-palette, grey-washed) !default;
-
-/**
- * Светло-серый цвет.
- * @type Color
- */
-$global-grey-light: map-get($global-grey-palette, grey-light) !default;
-
-/**
- * Серый цвет.
- * @type Color
- */
-$global-gray-medium: map-get($global-grey-palette, gray-medium) !default;
-
-/**
- * Темно-серый цвет.
- * @type Color
- */
-$global-grey-dark: map-get($global-grey-palette, grey-dark) !default;
-
-/**
- * Черный цвет.
- * @type Color
- */
-$global-grey-deep: map-get($global-grey-palette, grey-deep) !default;
-
-/**
- * Палитра синих цветов.
- * @type Map
- */
- $global-blue-palette: (
-	blue-washed: #f2f5fa, /* Очень светло-синий цвет. */
-	blue-light: #7da2bf,  /* Светло-синий цвет. */
-	blue-medium: #5d89ab, /* Синий цвет. */
-	blue-dark: #305d7f,   /* Темно-синий цвет. */
-	blue-deep: #2a5576    /* Очень темно-синий цвет. */
-) !default;
-
-/**
- * Очень светло-синий цвет.
- * @type Color
- */
- $global-blue-washed: map-get($global-blue-palette, blue-washed) !default;
- 
- /**
-  * Светло-синий цвет.
-  * @type Color
-  */
- $global-blue-light: map-get($global-blue-palette, blue-light) !default;
- 
- /**
-  * Синий цвет.
-  * @type Color
-  */
- $global-blue-medium: map-get($global-blue-palette, blue-medium) !default;
- 
- /**
-  * Темно-синий цвет.
-  * @type Color
-  */
- $global-blue-dark: map-get($global-blue-palette, blue-dark) !default;
- 
- /**
-  * Очень темно-синий цвет.
-  * @type Color
-  */
- $global-blue-deep: map-get($global-blue-palette, blue-deep) !default;
-
-/**
- * Размер шрифта по умолчанию. 
+ * Размер шрифта по умолчанию.
  * @type Number
  */
-$global-font-size: 100% !default;
+$global-font-size: 18 !default;
 
 /**
  * Высота строки по умолчанию.
@@ -116,13 +34,13 @@ $global-body-font-family: Arial, sans-serif !default;
  * Цвет текста тела по умолчанию.
  * @type Color
  */
-$global-body-font-color: $global-grey-deep !default;
+$global-body-font-color: $grey-deep !default;
 
 /**
  * Цвет фона тела по умолчанию.
  * @type Color
  */
-$global-body-background: $global-grey-washed !default;
+$global-body-background: $grey-washed !default;
 
 /**
  * Включает `<true>` округление углов.
@@ -140,13 +58,13 @@ $global-border-radius: 0.1875rem !default;
  * Включает `<true>` тени у элементов.
  * @type Boolean
  */
- $global-enable-shadows: true !default;
+$global-enable-shadows: true !default;
  
  /**
   * Значение тени по умолчанию.
   * @type Number
   */
- $global-box-shadow: 0 1px 7px rgba(0, 0, 0, .05) !default;
+$global-box-shadow: 0 1px 7px rgba(0, 0, 0, 0.05) !default;
 
  /**
  * Включает `<true>` переход у элементов.
