--- a/typography/_size.scss
+++ b/typography/_size.scss
@@ -1,32 +1,14 @@
 /**
- * Размер шрифта `<small>` элементов.
- * @type Number
- */
-$font-size-sm: 0.875rem/*14px*/ !default;
-
-/**
- * Размер шрифта `<medium>` элементов.
- * @type Number
- */
-$font-size-md: 1rem/*16px*/ !default;
-
-/**
- * Размер шрифта `<large>` элементов.
- * @type Number
- */
-$font-size-lg: 1.125rem/*18px*/ !default;
-
-/**
  * Размеры заголовков.
  * @type Map
  */
 $header-sizes: (
-	'h1': 2.5  /*40px*/,
-	'h2': 2    /*32px*/,
-	'h3': 1.75 /*28px*/,
-	'h4': 1.5  /*24px*/,
-	'h5': 1.25 /*20px*/,
-	'h6': 1    /*16px*/
+	'h1': 2.5,
+	'h2': 2,
+	'h3': 1.75,
+	'h4': 1.5,
+	'h5': 1.25,
+	'h6': 1
 ) !default;
 
 @each $header, $font-size in $header-sizes {
