--- a/_reboot.scss
+++ b/_reboot.scss
@@ -13,7 +13,7 @@ html {
 body {
 	color: $global-body-font-color;
 	font-family: $global-body-font-family;
-	font-size: $global-font-size;
+	font-size: $global-font-size + px;
 	font-weight: $global-weight-normal;
 	line-height: $global-line-height;
 	
